@@ -3,66 +3,63 @@ package com.employeerecords.modelValidator;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.Date;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 import com.employeerecords.model.EmployeeEntity;
 
 public class ValidateEntity {
 	
-	public static void validateEmployee(EmployeeEntity employee) throws IllegalArgumentException {
-		if(employee.getFirstname() == null || employee.getFirstname().isEmpty()) {
-			throw new IllegalArgumentException("Firstname cannot be null or empty");
-		}
-		if(employee.getFirstname().length() <3 ) {
-			throw new IllegalArgumentException("Unusual name length");
-		}
-//		if(!isValidName(employee.getFirstname())){
-//			throw new IllegalArgumentException("Invalid character present. Character must be between aA-zZ");
-//		}
-		if(employee.getLastname() == null || employee.getLastname().isEmpty()) {
-			throw new IllegalArgumentException("Lastname cannot be null or empty");
-		}
-		if(employee.getLastname().length()<3) {
-			throw new IllegalArgumentException("Unusual name length");
-		}
-		if(employee.getAge() <= 0) {
-			throw new IllegalArgumentException("Age must be a positive integer");
-		}
-		if(employee.getDate() == null || employee.getDate().isBlank() || employee.getDate().isEmpty()) {
-			throw new IllegalArgumentException("Date cannot be null, empty or blank");
-		}
-		if(!isvalidDate(employee.getDate())){
-			throw new IllegalArgumentException("Date must be in the format- dd-MM-yyyy");
-		}
-		if(employee.getAddress() == null || employee.getAddress().isEmpty()) {
+	public static boolean validateEmployee(EmployeeEntity employee) throws IllegalArgumentException {
+		if(employee.getAddress() == null || employee.getAddress().trim().isEmpty()) {
 			throw new IllegalArgumentException("Address cannot be null or empty");
 		}
-		if(employee.getCity() == null || employee.getCity().isEmpty()) {
+		if(employee.getCity() == null || employee.getCity().trim().isEmpty()) {
 			throw new IllegalArgumentException("City cannot be null or empty");
 		}
-	}
-	public static boolean isvalidDate(String dateEmployee) {
-		String dateFormat = "dd-MM-yyyy";
-		SimpleDateFormat ddateformat = new SimpleDateFormat(dateFormat);
-		ddateformat.setLenient(false);
-		
-		try {
-			Date date = ddateformat.parse(dateEmployee);
-			return true;
-		}catch(ParseException e) {
-			return false;
+		if(employee.getFirstname() == null || employee.getFirstname().trim().isEmpty()) {
+			throw new IllegalArgumentException("Firstname cannot be null or empty");
 		}
-	}
-	public static void isValidName(String nName) {
-		for(int i = 0; i<nName.length(); ++i) {
-			if((char)(nName.charAt(i)) <= 65 || (char)(nName.charAt(i)) >= 123) {
-				System.out.println("Invalid string");
-			}
-			else {
-				System.out.println("valid string");
-			}
-//			throw new IllegalArgumentException("Invalid character combo");
+		if(employee.getLastname() == null || employee.getLastname().trim().isEmpty()) {
+			throw new IllegalArgumentException("Lastname cannot be null or empty");
 		}
-		
-	}
+		if(employee.getAge() <= 0) {
+			throw new IllegalArgumentException("Age cannot be zero or less than zero");
+		}
+		if(employee.getSalary() <= 0) {
+			throw new IllegalArgumentException("Salaray cannot be negative or zero");
+		}
+		if(employee.getDepartment() == null || employee.getDepartment().trim().isEmpty()) {
+			throw new IllegalArgumentException("Department cannot be null or empty");
+		}
+		if(employee.getDate() == null || employee.getDate().trim().isEmpty()) {
+			throw new IllegalArgumentException("Date cannot be null or empty");
+		}
+			SimpleDateFormat ddateformat = new SimpleDateFormat("dd-MM-yyyy");
+			ddateformat.setLenient(false);
+			 try {
+		            Date date = ddateformat.parse(employee.getDate());
+		        } catch (ParseException e) {
+		            System.out.println("ParseException: " + e.getMessage());
+		            System.out.println("Date is invalid.");
+		            return false;
+		        }
+			 if(employee.getFirstname().length()<3|| employee.getLastname().length()<3 ) {
+					throw new IllegalArgumentException("Unusual name length");
+				}
+			 Pattern pattern = Pattern.compile("^[a-zA-Z]+$");
+			 Matcher matcher = pattern.matcher(employee.getFirstname());
+			 Matcher matcher1 = pattern.matcher(employee.getLastname());
+			 if(!matcher.matches() || !matcher1.matches()) {
+				 throw new IllegalArgumentException("Invalid character combination");
+			 }
+			 if(employee.getAge()<18) {
+				 throw new IllegalArgumentException("Age must be above 18");
+			 }
+			 return true;
+		    }
+	
+
+	
 
 }
